# pdc-hs

./: .stack-all  ChangeLog.md  Makefile  README.md  cabal.project  pdc.cabal  stack.yaml
app/: Main.hs
src/Fedora/: PDC.hs
