name:                pdc
version:             0.1
synopsis:            Fedora Product Definition Center service
description:
        A library and cli to Fedora's PDC service
license:             MIT
license-file:        LICENSE
author:              Jens Petersen <juhpetersen@gmail.com>
maintainer:          Jens Petersen <juhpetersen@gmail.com>
copyright:           2020  Jens Petersen <juhpetersen@gmail.com>
build-type:          Simple
cabal-version:       1.18
extra-doc-files:     README.md
                   , ChangeLog.md
tested-with:         GHC == 8.0.2
                     GHC == 8.2.2
                     GHC == 8.4.4
                     GHC == 8.6.5
                     GHC == 8.8.3

source-repository head
  type:                git
  location:            https://github.com/juhp/pdc-hs.git

executable pdc-cli
  main-is:             Main.hs
  other-modules:       Paths_pdc
  hs-source-dirs:      app
  build-depends:       aeson
                     , aeson-pretty
                     , base >= 4.9.1.0 && < 5
                     , bytestring
                     , extra
                     , pdc
                     , simple-cmd-args >= 0.1.6
                     , split
                     , text
                     , unordered-containers
                     , yaml
  default-language:    Haskell2010
  ghc-options:         -Wall
  if impl(ghc >= 8.0)
    ghc-options:       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields

library
  build-depends:       aeson
                     , base >= 4 && < 5
                     , http-query
                     , text
                     , time

  exposed-modules:     Fedora.PDC
  hs-source-dirs:      src

  ghc-options:         -Wall
  if impl(ghc >= 8.0)
    ghc-options:       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields

  default-language:    Haskell2010
